<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background"
                android:orientation="vertical">
    <FrameLayout
        android:id="@+id/acrostic_framelayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/android_title_bg">
        <TextView
            android:id="@+id/acrostic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/acrostic_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/miniAdLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acrostic_framelayout"
        tools:ignore="Orientation" />
    <RelativeLayout
        android:id="@+id/acrostic_relativelayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/miniAdLinearLayout"
        android:layout_above="@+id/appOffersButton"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables" >
        <EditText
            android:id="@+id/acrostic_words_edt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acrostic_words_hint"
            android:inputType="text">
            <requestFocus />
        </EditText>
        <Spinner
            android:id="@+id/acrostic_num_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acrostic_words_edt"
            android:entries="@array/nums"
            android:prompt="@string/acrostic_num_prompt"/>
        <Spinner
            android:id="@+id/acrostic_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acrostic_words_edt"
            android:layout_toRightOf="@+id/acrostic_num_spinner"
            android:entries="@array/types"
            android:prompt="@string/acrostic_type_prompt"/>
        <Spinner
            android:id="@+id/acrostic_yayuntype_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acrostic_words_edt"
            android:layout_toRightOf="@+id/acrostic_type_spinner"
            android:entries="@array/yayuntypes"
            android:prompt="@string/acrostic_yayuntype_prompt"/>
        <Button
            android:id="@+id/acrostic_create_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acrostic_yayuntype_spinner"
            android:text="@string/acrostic_create_btn"/>
        <ProgressBar
            android:id="@+id/acrostic_query_progressbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/acrostic_create_btn"
            android:visibility="gone"/>
        <ScrollView
            android:id="@+id/acrostic_scrollview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acrostic_create_btn"
            android:layout_marginTop="0dp"
            android:scrollbars="none">
            <TextView
                android:id="@+id/acrostic_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/acrostic_baike"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>